fix: add krm-dev tools
