# pkg/api/usercenter/v1/errors.pb.go
@@ -1,18 +1,17 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.34.2
-// 	protoc        v5.27.0--rc1
+// 	protoc-gen-go v1.33.0
+// 	protoc        v3.19.4
 // source: usercenter/v1/errors.proto
 
 package v1
 
 import (
-	reflect "reflect"
-	sync "sync"
-
 	_ "github.com/go-kratos/kratos/v2/errors"
 	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
 )
 
 const (
@@ -135,13 +134,10 @@ func file_usercenter_v1_errors_proto_rawDescGZIP() []byte {
 	return file_usercenter_v1_errors_proto_rawDescData
 }
 
-var (
-	file_usercenter_v1_errors_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
-	file_usercenter_v1_errors_proto_goTypes   = []any{
-		(ErrorReason)(0), // 0: usercenter.v1.ErrorReason
-	}
-)
-
+var file_usercenter_v1_errors_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_usercenter_v1_errors_proto_goTypes = []interface{}{
+	(ErrorReason)(0), // 0: usercenter.v1.ErrorReason
+}
 var file_usercenter_v1_errors_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for method output_type
 	0, // [0:0] is the sub-list for method input_type
