# pkg/api/usercenter/v1/usercenter_http.pb.go
@@ -1,46 +1,46 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-http v2.8.0
-// - protoc             v5.27.0--rc1
+// - protoc-gen-go-http v2.5.3
+// - protoc             v3.19.4
 // source: usercenter/v1/usercenter.proto
 
 package v1
 
 import (
 	context "context"
-
 	http "github.com/go-kratos/kratos/v2/transport/http"
 	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
 )
 
 // This is a compile-time assertion to ensure that this generated file
 // is compatible with the kratos package it is being compiled against.
-var (
-	_ = new(context.Context)
-	_ = binding.EncodeURL
-)
+var _ = new(context.Context)
+var _ = binding.EncodeURL
 
 const _ = http.SupportPackageIsVersion1
 
+const OperationUserCenterCreateUser = "/usercenter.v1.UserCenter/CreateUser"
 const OperationUserCenterLogin = "/usercenter.v1.UserCenter/Login"
+const OperationUserCenterLogout = "/usercenter.v1.UserCenter/Logout"
 
 type UserCenterHTTPServer interface {
-	// Login Login 登录
+	CreateUser(context.Context, *CreateUserRequest) (*UserReply, error)
 	Login(context.Context, *LoginRequest) (*LoginReply, error)
+	Logout(context.Context, *LogoutRequest) (*emptypb.Empty, error)
 }
 
 func RegisterUserCenterHTTPServer(s *http.Server, srv UserCenterHTTPServer) {
 	r := s.Route("/")
 	r.POST("/v1/usercenter/login", _UserCenter_Login0_HTTP_Handler(srv))
+	r.POST("/v1/usercenter/logout", _UserCenter_Logout0_HTTP_Handler(srv))
+	r.POST("/v1/users", _UserCenter_CreateUser0_HTTP_Handler(srv))
 }
 
 func _UserCenter_Login0_HTTP_Handler(srv UserCenterHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in LoginRequest
 		if err := ctx.Bind(&in); err != nil {
-			return err
-		}
-		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
 		http.SetOperation(ctx, OperationUserCenterLogin)
@@ -56,8 +56,48 @@ func _UserCenter_Login0_HTTP_Handler(srv UserCenterHTTPServer) func(ctx http.Con
 	}
 }
 
+func _UserCenter_Logout0_HTTP_Handler(srv UserCenterHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in LogoutRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationUserCenterLogout)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Logout(ctx, req.(*LogoutRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*emptypb.Empty)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _UserCenter_CreateUser0_HTTP_Handler(srv UserCenterHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CreateUserRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationUserCenterCreateUser)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CreateUser(ctx, req.(*CreateUserRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UserReply)
+		return ctx.Result(200, reply)
+	}
+}
+
 type UserCenterHTTPClient interface {
+	CreateUser(ctx context.Context, req *CreateUserRequest, opts ...http.CallOption) (rsp *UserReply, err error)
 	Login(ctx context.Context, req *LoginRequest, opts ...http.CallOption) (rsp *LoginReply, err error)
+	Logout(ctx context.Context, req *LogoutRequest, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
 }
 
 type UserCenterHTTPClientImpl struct {
@@ -66,6 +106,19 @@ type UserCenterHTTPClientImpl struct {
 
 func NewUserCenterHTTPClient(client *http.Client) UserCenterHTTPClient {
 	return &UserCenterHTTPClientImpl{client}
+}
+
+func (c *UserCenterHTTPClientImpl) CreateUser(ctx context.Context, in *CreateUserRequest, opts ...http.CallOption) (*UserReply, error) {
+	var out UserReply
+	pattern := "/v1/users"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationUserCenterCreateUser))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
 }
 
 func (c *UserCenterHTTPClientImpl) Login(ctx context.Context, in *LoginRequest, opts ...http.CallOption) (*LoginReply, error) {
@@ -78,5 +131,18 @@ func (c *UserCenterHTTPClientImpl) Login(ctx context.Context, in *LoginRequest, 
 	if err != nil {
 		return nil, err
 	}
-	return &out, nil
+	return &out, err
+}
+
+func (c *UserCenterHTTPClientImpl) Logout(ctx context.Context, in *LogoutRequest, opts ...http.CallOption) (*emptypb.Empty, error) {
+	var out emptypb.Empty
+	pattern := "/v1/usercenter/logout"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationUserCenterLogout))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
 }
